--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,11 @@
 body {
   margin:0;
   font-family: 'Marvel', sans-serif;
+  background-image: url('https://blog.umhb.edu/wp-content/uploads/2019/06/mcu-1920x1080.jpg'); 
 }
 
 .game {
-  background-image: url('https://blog.umhb.edu/wp-content/uploads/2019/06/mcu-1920x1080.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+   
   height: 100vh;
 }
 
@@ -79,4 +78,42 @@ body {
 
 .noFlipsAgain{
     background-image: none;
+}
+
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
